# vaultscan

./: .env.example  .gitignore  PLAN.md  pyproject.toml
data/: programs.json
data/fixtures/: anchor_escrow.json
src/vaultscan/: __init__.py  authority.py  cli.py  config.py  idl_fetch.py  idl_parse.py
