[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vaultscan"
version = "0.1.0"
description = "Solana vault/PDA lockup detection (IDL fetch + scan pipeline)"
readme = "PLAN.md"
requires-python = ">=3.11"
dependencies = [
    "python-dotenv>=1.0.0",
]

[project.scripts]
vaultscan = "vaultscan.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
